ci: add formatting CI
Use Google formatting guidelines to format existing code.